Footer - navigation - podtržení

--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -12,7 +12,7 @@
             Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
           </p>
         </div>
-        <div class="tm-footer_nav mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <h3>Navigation</h3>
           <nav>
             <ul>
