favicon - studio.tm

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -26,6 +26,7 @@
   <meta name="twitter:title" property="og:title" content="Developers for your startup">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://studio.topmonks.com/">
+  <meta name="twitter:image" property="og:image" content="https://studio.topmonks.com/og.png">
   {% include 'shared/analytics.html' %}
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
