New design of Blockchain.tm

--- a/blockchain.topmonks.com/src/html/shared/header.html
+++ b/blockchain.topmonks.com/src/html/shared/header.html
@@ -34,10 +34,13 @@
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li>
-              <a href="#we-offer">What can we do for you</a>
+              <a href="#we-offer_development">Development</a>
             </li>
             <li>
-              <a href="#security">Security first</a>
+              <a href="#we-offer_audit">Audit</a>
+            </li>
+            <li>
+              <a href="#we-offer_design">UX</a>
             </li>
             <li>
               <a href="#our-work">How we work</a>
