Blockchain - nový avatar Josef

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -395,8 +395,8 @@
             </svg>
           </a>
         </div>
-      <!--  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <img class="person__photo" src="https://insight.topmonks.com/avatar/josef-tetek"
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <img class="person__photo" src="/images/team/josef.jpg"
                alt="[photo] Josef Tětek" width="92" height="92">
           <h4>Josef Tětek</h4>
           <p>Crypto Analyst</p>
@@ -417,7 +417,7 @@
               </g>
             </svg>
           </a>
-        </div>-->
+        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2 class="h2_title"><a href="mailto:blockchain@topmonks.com" class="button">CONTACT US!</a></h2>
         </div>
