Meet-us video for Startup Stage

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -71,8 +71,8 @@
             to share their experiences with us. Come and ask them whatever you want. This is
             what is #startupstage about&nbsp;&mdash; no bullshit enjoyable&nbsp;night.</p>
 
-         <!-- <div class="links"><a href="">FEEL THE VIBE</a>
-          </div>-->
+       <div class="links"><a href="https://youtu.be/3bRkKJ0Xzmo">FEEL THE VIBE</a>
+          </div>
         </div>
       </div>
     </div>
