--- a/www.topmonks.cz/src/html/kde-nas-najdete/index.html
+++ b/www.topmonks.cz/src/html/kde-nas-najdete/index.html
@@ -71,8 +71,8 @@
             startupů. Ve velmi přátelské atmosféře se jich můžete zeptat na cokoli,
             co vás zajímá. Talkshow o&nbsp;startupech. Bez bullshitu.</p>
 
-        <!--  <div class="links"><a href="">ZAŽIJTE ENERGII #STARTUPSTAGE</a>
-          </div>-->
+       <div class="links"><a href="https://youtu.be/3bRkKJ0Xzmo">ZAŽIJTE ENERGII #STARTUPSTAGE</a>
+          </div>
         </div>
       </div>
     </div>
