Meet-us: správný href pro codingdojo

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -236,7 +236,7 @@
       </div>
       <div
         class="other-events_logos mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
-        <a class="img-link" href="CodingDojo.cz"><img class="tm-meetup__img" alt="Coding Dojo logo"
+        <a class="img-link" href="http://CodingDojo.cz"><img class="tm-meetup__img" alt="Coding Dojo logo"
                                          src="https://res.cloudinary.com/topmonks/image/upload/v1544789647/loga/logo_codingdojo.png"
                                          style="width: 219px"></a>
 
