Tomas paulus - new avatar

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -418,6 +418,11 @@
             </svg>
           </a>
         </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <img class="person__photo" src="/images/team/tomas.jpg" alt="[photo] Tomáš Paulus">
+          <h4>Tomáš Paulus</h4>
+          <p>UX designer</p>
+        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2 class="h2_title"><a href="mailto:blockchain@topmonks.com" class="button">CONTACT US!</a></h2>
         </div>
