--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -99,7 +99,7 @@
             </div>
 
             <img src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_230/v1542985860/caffe.topmonks.cz/TopMonks_Caf%C3%A9_fb_cover_banner.png"
-              alt="Plakát pro topmonks caffe na téma {{upcomingEvent.shortTitle}}" class="news-img upcoming-poster">
+              alt="Plakát pro topmonks caffè na téma {{upcomingEvent.shortTitle}}" class="news-img upcoming-poster">
 
             <div class="news_content-details mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <div class="date">
