Typo and layout fixes

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -89,8 +89,8 @@
       <div class="mdc-layout-grid__inner">
         <div class="opening_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h1>Teach or die, <br>learn or die.</h1>
-          <p>Každý první čtvrtek v&nbsp;měsící se setkáváme a bavíme se
-            o&nbsp;tématéch, která nás&nbsp;baví.</p>
+          <p>Každý první čtvrtek v&nbsp;měsíci se setkáváme a bavíme se
+            o&nbsp;tématech, která nás&nbsp;baví.</p>
         </div>
 
         <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
