Footer layout updates for topmonks.com and .cz

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -4,46 +4,49 @@
   <div class="nav-and-contacts">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3>O nás</h3>
-          <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
-          <p>Pokud se ti líbí naše myšlení, přijď a <a href="/volna-mista/">přidej se k nám</a> a dej nám vědět, jak ti
-            <a href="/o-nas/">můžeme pomoci s tvým projektem</a>.
-            Nebo nás jednoduše <a href="/kontakt/">přijď navštívit</a>. Rádi <a href="/kde-nas-najdete/">potkáváme nové
-              a zajímavé lidi</a>.
-          </p>
-        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Navigace</h3>
+          <h4>Co děláme?</h4>
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="/">Software development</a></li>
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
               <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
-              <li><a href="https://blog.topmonks.com/">Blog</a></li>
-              <li><a href="/kontakt/">Kontakt</a></li>
-              <li><a href="/volna-mista/">Volná místa</a></li>
             </ul>
           </nav>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Kontakt</h3>
-          <span itemprop="legalName">TopMonks, s.r.o.</span>
-          <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
-            <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
-              <span itemprop="postalCode">141 00</span>
-              <span itemprop="addressLocality">Praha 4</span><br>
-              <span itemprop="addressCountry">Czech Republic</span>
-            </div>
-            <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
-              <meta itemprop="latitude" content="50.045386">
-              <meta itemprop="longitude" content="14.491246">
+          <h4>Hledáte něco?</h4>
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/o-nas/">O nás</a></li>
+              <li><a href="/kde-nas-najdete/">Kde nás najdete</a></li>
+              <li><a href="https://blog.topmonks.com/">Blog</a></li>
+              <li><a href="/volna-mista/">Volná místa</a></li>
+              <li><a href="/kontakt/">Kontakt</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h4>O nás</h4>
+          <p class="tm-text--margin-top">Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
+          <div itemprop="subOrganization" itemscope=""
+               itemtype="https://schema.org/Organization">
+            <span itemprop="legalName">TopMonks s.r.o.</span>
+            <div itemprop="location" itemscope itemtype="https://schema.org/Place">
+              <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                <span itemprop="streetAddress">Struhařovská 2931/9</span><br/>
+                <span itemprop="postalCode">141 00</span>
+                <span itemprop="addressLocality">Praha 4</span><br/>
+                <span itemprop="addressCountry">Česká Republika</span>
+              </div>
+              <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
+                <meta itemprop="latitude" content="50.045386">
+                <meta itemprop="longitude" content="14.491246">
+              </div>
             </div>
           </div>
-          <div><a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
-            <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
         </div>
       </div>
     </div>
@@ -52,7 +55,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p>© 2018 TopMonks s.r.o.</p>
+          <p>© 2019 TopMonks s.r.o.</p>
         </div>
         <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
