--- a/shared/src/common/footer.html
+++ b/shared/src/common/footer.html
@@ -1,34 +1,41 @@
-
 <footer class="tm-footer">
   <div class="nav-and-contacts">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3>About</h3>
-          <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-          <p>If you like these ideas, come and <a href="https://www.topmonks.com/jobs/">join us</a>, and have your
-            <a href="https://www.topmonks.com/about-us/">project delivered by us</a>.
-            Or simply <a href="https://www.topmonks.com/contact/">visit us</a>.
-            We enjoy <a href="https://www.topmonks.com/meet-us/">meeting interesting people</a>.</p>
-        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Navigation</h3>
+          <h4>What we do?</h4>
           <nav>
             <ul>
-              <li><a href="https://www.topmonks.com/">Home</a></li>
+              <li><a href="/">Software development</a></li>
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
-              <li><a href="https://prodeti.topmonks.cz/" hreflang="cs">Programming for Kids</a></li>
-              <li><a href="https://blog.topmonks.com/">Blog</a></li>
-              <li><a href="https://www.topmonks.com/contact/">Contacts</a></li>
-              <li><a href="https://www.topmonks.com/jobs/">Jobs</a></li>
+              <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
             </ul>
           </nav>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Contact</h3>
-          <span itemprop="legalName">TopMonks s.r.o.</span>
-          <div><a itemprop="email" href="mailto:info&#64;topmonks.com">info&#64;<!-- -->topmonks.com</a></div>
+          <h4>Looking for something?</h4>
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/about-us/">About TopMonks</a></li>
+              <li><a href="/meet-us/">Meet Us</a></li>
+              <li><a href="https://blog.topmonks.com/">Blog</a></li>
+              <li><a href="/jobs/">Jobs</a></li>
+              <li><a href="/contact/">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h4>About us</h4>
+          <p class="tm-text--margin-top">We are your software development partners, experienced with both startup and corporate environment.</p>
+          <div itemprop="subOrganization" itemscope=""
+               itemtype="https://schema.org/Organization">
+            <span itemprop="legalName">TopMonks s.r.o.</span>
+            <div>
+              <a href="mailto:info@topmonks.com" itemprop="email">info@topmonks.com</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -37,7 +44,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p>© 2018 TopMonks s.r.o.</p>
+          <p>© 2019 TopMonks s.r.o.</p>
         </div>
         <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
