--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -4,32 +4,50 @@
   <div class="nav-and-contacts">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <h3>About</h3>
-          <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-          <p>If you like these ideas, come and <a href="/jobs/">join us</a>, and have your <a href="/about-us/">project
-              delivered by us</a>.
-            Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
-          </p>
-        </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Navigation</h3>
+          <h3>What we do?</h3>
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="https://studio.topmonks.com/">Software development</a></li>
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
               <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
-              <li><a href="https://blog.topmonks.com/">Blog</a></li>
-              <li><a href="/contact/">Contacts</a></li>
-              <li><a href="/jobs/">Jobs</a></li>
             </ul>
           </nav>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Contact</h3>
-          <span itemprop="legalName">TopMonks s.r.o.</span>
-          <div><a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
+          <h3>Looking for something?</h3>
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/about-us/">About TopMonks</a></li>
+              <li><a href="/meet-us/">Meet Us</a></li>
+              <li><a href="https://blog.topmonks.com/">Blog</a></li>
+              <li><a href="/jobs/">Jobs</a></li>
+              <li><a href="/contact/">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>About</h3>
+          <p>We are your software development partners, experienced with both startup and corporate environment.</p>
+          <div itemprop="subOrganization" itemscope=""
+               itemtype="https://schema.org/Organization">
+            <span itemprop="legalName"><b>TopMonks s.r.o.</b></span>
+            <div itemprop="location" itemscope itemtype="https://schema.org/Place">
+              <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                <span itemprop="streetAddress"><b>Struhařovská 2931/9</b></span><br>
+                <span itemprop="postalCode">141 00</span>
+                <span itemprop="addressLocality">Praha 4</span><br>
+                <span itemprop="addressCountry">Czech Republic</span>
+              </div>
+              <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha">show on map</a>
+              <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
+                <meta itemprop="latitude" content="50.045386">
+                <meta itemprop="longitude" content="14.491246">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
