Updates for contact pages
- fixing Berenika's phone number
- fixing few typos

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -178,7 +178,7 @@
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Berenika Alexandre</span><br>
-              <a itemprop="telephone" href="tel:+420724390424">+1-415-525-6313</a><br>
+              <a itemprop="telephone" href="tel:+14155256313">+1-415-525-6313</a><br>
               <a itemprop="email" href="mailto:berenika.alexandre&#64;topmonks.com">berenika.alexandre@topmonks.com</a>
             </p>
           </div>
@@ -187,8 +187,8 @@
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Startup studio</b></h3>
-        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup</a> vám pomůže proměnit
+        <h3><b>Startup Studio</b></h3>
+        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup Studio</a> vám pomůže proměnit
           počáteční myšlenku v&nbsp;produkt.
           Jsme vaši první investoři a konzultanti.</p>
         <div class="mdc-layout-grid__inner">
