--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -42,7 +42,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1>Developers for your startup</h1>
-            <p>TopMonks Startup Monastery can boost your idea from scratch. We are your tech
+            <p>TopMonks Startup Studio <b>invests</b> your dream from idea to real success. We are your tech
               angels &amp; first investors.</p>
           </div>
           <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
