--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -42,7 +42,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1>Developers for your startup</h1>
-            <p>TopMonks Startup Studio <b>invests</b> your dream from idea to real success. We are your tech
+            <p>TopMonks Startup Studio <b>invests</b> into your dream from idea to real success. We are your tech
               angels &amp; first investors.</p>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -183,8 +183,8 @@
         <form class="mdc-layout-grid__inner"
               action="https://topmonks.us19.list-manage.com/subscribe/post?u=cdb5c1cf04e72dcfb3cd050cc&amp;id=92a3e1815e"
               method="post">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p class="p_center">Subscribe to our mailing list</p>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-text--align-center">
+            <p>Subscribe to our mailing list</p>
           </div>
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
