--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -595,7 +595,7 @@
           fetch("https://uwjqzwx0d3.execute-api.eu-central-1.amazonaws.com/production/startupstudio-contact-form", {
             method: "POST",
             body: JSON.stringify(data)
-          }).then(document.alert('Thanks a lot for contacting us! We will get back to you soon!'));
+          }).then(alert('Thanks a lot for contacting us! We will get back to you soon!'));
         });
         $('.tm-form__contact .tm-form-control__field')
           .on('blur', function(e){ toggleFieldState(e.target) })
